project/stage/tests/accept/empty_functions/w_params/multiple_params/int_func_string_string_string_int_params_duplicate_ids.ul
int _____123567FkoP (string __123Kk, string __234IKk, string __234IKk, string __234IKk, int __234IKk) { }
