project/stage/tests/reject/bad_statements/bad_while/var_decl_in_condition.ul
int F() {
    while( void temp; ) { }
}
